# SecB_MBP_HDXMS

./: .gitignore  README.md  freeze.txt  log.md  pyproject.toml
ava/prod/: package_raw_data_to_zip.py
ava/prod/figures_folding_per_residue/: main.py  plot_data.py
ava/prod/mbp_y283d_denat_secb/: main.py
ava/prod/molstar_renders/: main.html  main.ipynb  main.py
ava/prod/residue_fits/: compare_hdx_smfret.py  main.py  summary.py
ava/toolbox/: constants.py
ava/toolbox/plot/: constants.py  utils.py
data/1729844783_Y283D_SecB_denat_karamanou/: hdx_spec.yaml  readme.md
data/1729844783_Y283D_SecB_denat_karamanou/data/: MBPsmFRET_Y283D_modOct24.csv
data/20221207_1304_MBP_folding_Karamanou/: hdx_spec.yaml  metadata.yaml
data/20221207_1304_MBP_folding_Karamanou/data/: MBPp101_20Cfold_3Dec2022.csv  MBPp101plusSecB_20Cfold_3Dec2022.csv  MBPsmFRET_Y283D_Feb2021.csv  MBPsmFRET_wt_Febr2021.csv  smFRETY283D_SecB_May2021.csv
metadata/: deltaG_fit_settings.yaml
